# rocket_macros

./: Cargo.toml
examples/: custom-content-type.rs  derive.rs  segments.rs
src/: errors.rs  lib.rs
src/decorators/: derive_form.rs  error.rs  mod.rs  route.rs
src/macros/: mod.rs
src/utils/: mod.rs  params.rs  router_def.rs  syn_ext.rs  wrappers.rs
tests/: tests.rs
tests/run-pass/: complete-decorator.rs  derive_form.rs  dynamic-paths.rs  empty-fn.rs  empty_form.rs  error-handler.rs  issue-1-colliding-names.rs  methods.rs  rank_decorator.rs  segments.rs
